<resources>
    <string name="app_name">WMS</string>
    <string name="full_app_name">Warehouse Management System</string>
    <string name="log_in">Log in</string>
    <string name="logo_desc">Logo</string>
    <string name="_null">Null</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">New Account</string>
    <string name="registration">Registration</string>
    <string name="copyright">Created by Elmir I-de &#169;</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_account">Account</string>
    <string name="login_main_greeting">Welcome \n To</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_account">Account info</string>
    <string name="menu_account_text_view">Info</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_header_actions">Actions</string>
    <string name="form_type_here_hint">Type here</string>
    <string name="form_password_hint">••••••••••</string>
    <string name="form_username">Username: </string>
    <string name="form_password">Password: </string>
    <string name="form_email">Email: </string>
    <string name="form_type">Type: </string>
    <string name="form_shop">Shop: </string>
    <string name="form_orders">Orders: </string>
    <string name="action_register_button">Register</string>
    <string name="example">Example</string>
    <string name="total">Total:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="order">Order</string>
    <string name="order_info">Order info</string>
</resources>
