<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkable="false">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_money"
            android:title="@string/menu_balance" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/menu_orders" />

    </group>

    <item android:title="@string/menu_header_actions">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
