<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/registrationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/registration"
                android:textColor="#000"
                android:textSize="25sp" />

        </TableRow>

        <TableRow android:layout_marginTop="35dp">

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/form_username"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:hint="@string/form_type_here_hint"
                android:textAlignment="center" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/form_email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_type_here_hint"
                android:inputType="textEmailAddress"
                android:textAlignment="center" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/form_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/form_password_hint"
                android:inputType="textPassword"
                android:textAlignment="center" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/shopTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/form_shop"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/shopEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/form_type_here_hint"
                android:inputType="text"
                android:textAlignment="center" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/form_type"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:textAlignment="center">

            </Spinner>

        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="src_over"
        android:onClick="register"
        android:text="@string/action_register_button"
        android:textColor="#fff"
        android:textSize="15sp" />
</LinearLayout>